--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.484.0",
     "next": "^14.2.25",
     "next-nprogress-bar": "^2.3.13",
