--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
